# wasm-executor

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  publish.yml
scripts/: build.sh
src/: lib.rs
