[package]
name = "wasm-executor"
version = "0.0.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
smoldot = { version = "0.19.4", default-features = false }
parity-scale-codec = { version = "3.7", default-features = false }

[profile.release]
codegen-units = 1
lto = true
